--- a/mail/index.html
+++ b/mail/index.html
@@ -12,12 +12,17 @@ heading: Setting up Email
                 <ul class="nav bs-sidenav">
                     <li class="active"><a href="#email-config">About</a></li>
                     <li><a href="#how-to">How to</a></li>
+                    <li><a href="#mailgun">Mailgun</a></li>
+                    <li><a href="#ses">Amazon SES</a></li>
+                    <li><a href="#gmail">Gmail</a></li>
+                    <li><a href="#from">From Address</a></li>
                 </ul>
             </nav>
         </aside>
         <section id="content" class="col-lg-9">
             <h2 id="email-config">Email Configuration</h2>
-            
+            <p>The following documentation details how to configure email in Ghost. Ghost uses <a href="https://github.com/andris9/Nodemailer">Nodemailer</a>, their documentation contains even more examples.</p>
+
             <h3>Wait what?</h3>
 
             <p>If you're familiar with PHP land, then you're probably very used to having email just magically work on your hosting platform. Node is a bit different, it's shiny and new and still a little rough around the edges in places.</p>
@@ -32,12 +37,14 @@ heading: Setting up Email
 
             <h2 id="how-to">Ok, so how do I do it?</h2>
 
-            <p>The first thing you're going to need is an account with an email sending service. We highly recommend Mailgun or Sendgrid. They both have nice free starter accounts which allow you to send more email than all but the most prolific email-subscription based blogs could manage.</p>
+            <p>The first thing you're going to need is an account with an email sending service. We highly recommend Mailgun. They have a nice free starter account which allows you to send more email than all but the most prolific email-subscription based blogs could manage. You could also use Gmail or Amazon SES.</p>
+
+            <p>Once you've decided on what email service to use, you need to add your settings to Ghost's config file. Wherever you have installed Ghost, you should find a <code class="path">config.js</code> file in the route directory along with <code class="path">index.js</code>. If you don't have a <code class="path">config.js</code> file yet, then copy <code class="path">config.example.js</code> and rename it.</p>
 
 
-            <h3>Mailgun</h3>
+            <h3 id="mailgun">Mailgun</h3>
 
-            <p>Head along to mailgun.org and sign up for an account. You'll need to have an email address on hand, and it will ask you to either provide a domain name, or think up a subdomain. You can change this later, so for now why not register a subdomain similar to the name of the blog you're setting up.</p>
+            <p>Head along to <a href="http://www.mailgun.com/">mailgun.com</a> and sign up for an account. You'll need to have an email address on hand, and it will ask you to either provide a domain name, or think up a subdomain. You can change this later, so for now why not register a subdomain similar to the name of the blog you're setting up.</p>
 
             <p>Verify your email address with Mailgun, and then you'll have access to their lovely control panel. You're going to need to find your new email service username and password that Mailgun have created for you (they're not the ones you sign up with), by clicking on your domain on the right hand side… see the little screencast below to help you find your details.</p>
 
@@ -45,7 +52,7 @@ heading: Setting up Email
 
             <br /><br />
 
-            <p>Right, now you've got everything you need, your mail settings need to look like this:</p>
+            <p>Right, now you've got everything you need, it's time to open up your config file. Open your <code class="path">config.js</code> file in the editor of your choice. Navigate to the environment you want to setup mail for, and change your mail settings to look like this:</p>
 
             <pre>
 mail: {
@@ -57,8 +64,7 @@ mail: {
             pass: ''
          }
     }
-}
-            </pre>
+}</pre>
 
             <p>Put your 'Login' from mailgun between the quote marks next to 'user' and your 'Password' from mailgun inside the quotes next to 'pass'. If I was configuring mailgun for the 'tryghosttest' account, it would look like this:</p>
 
@@ -72,12 +78,53 @@ mail: {
             pass: '25ip4bzyjwo1'
          }
     }
-}
-            </pre>
+}</pre>
 
             <p>Keep an eye out for all of the colons, quotes and curly brackets. Misplace one of those and you'll find you get weird errors.</p>
 
             <p>You can reuse your settings for both your development and production environment if you have both.</p>
+
+
+            <h3 id="ses">Amazon SES</h3>
+
+            <p>You can sign up for an Amazon Simple Email Service account over at <a href="http://aws.amazon.com/ses/">http://aws.amazon.com/ses/</a>. Once you finish signing up, you'll be given an access key and a secret.</p>
+
+            <p>Open Ghost's <code class="path">config.js</code> file in the editor of your choice. Navigate to the environment you want to setup mail for, and add your Amazon credentials to your mail settings as shown below:</p>
+
+            <pre>
+mail: {
+    transport: 'SES',
+    options: {
+        AWSAccessKeyID: "AWSACCESSKEY",
+        AWSSecretKey: "/AWS/SECRET",
+    }
+}</pre>
+
+            <h3 id="gmail">Gmail</h3>
+
+            <p>It is possible to use Gmail to send email from Ghost. If you are going to do this, we recommend that you <a href="https://accounts.google.com/SignUp">create a new account</a> for the purpose, rather than using any existing personal email account details.</p>
+
+            <p>Once you've created your new account, you can configure the settings in Ghost's <code class="path">config.js</code> file. Open the file in the editor of your choice. Navigate to the environment you want to setup mail for, and change your mail settings to look like this:</p>
+
+            <pre>
+mail: {
+    transport: 'SMTP',
+    options: {
+        auth: {
+            user: 'youremail@gmail.com',
+            pass: 'yourpassword'
+         }
+    }
+}</pre>
+
+            <h3 id="#from">From Address</h3>
+
+            <p>By default the 'from' address for mail sent from Ghost will be set to the email address on the general settings page. If you want to override this to something different, you can also configure it in the <code class="path">config.js</code> file.</p>
+
+            <pre>
+mail: {
+    fromaddress: 'myemail@address.com',
+}</pre>
 
         </section>
     </div>
