from anchor fix

--- a/mail/index.html
+++ b/mail/index.html
@@ -117,7 +117,7 @@ mail: {
     }
 }</pre>
 
-            <h3 id="#from">From Address</h3>
+            <h3 id="from">From Address</h3>
 
             <p>By default the 'from' address for mail sent from Ghost will be set to the email address on the general settings page. If you want to override this to something different, you can also configure it in the <code class="path">config.js</code> file.</p>
 
