--- a/mail/index.html
+++ b/mail/index.html
@@ -96,7 +96,7 @@ mail: {
     transport: 'SES',
     options: {
         AWSAccessKeyID: "AWSACCESSKEY",
-        AWSSecretKey: "/AWS/SECRET",
+        AWSSecretKey: "/AWS/SECRET"
     }
 }</pre>
 
