--- a/usage/settings.html
+++ b/usage/settings.html
@@ -7,7 +7,7 @@ subheading: Finding your way around, and getting set up the way you want
 chapter: usage
 permalink: /usage/settings/
 prev_section: configuration
-next_section: writing
+next_section: managing
 ---
 
 <div class="container">
