--- a/usage/configuration.html
+++ b/usage/configuration.html
@@ -19,7 +19,13 @@ next_section: settings
 
             <h2 id="configuration">Configuring Ghost</h2>
 
-            <h2 id="config-file">config.js</h2>
+            <p>After you run Ghost for the first time, you'll find a file called <code>config.js</code> in the root directory of Ghost, along with the <code>index.js</code>. This file allows you to set environment level configuration for things like your URL, database, and mail settings.</p>
+
+            <p>If you haven't yet run Ghost for the first time, you won't have this file yet. You can create one by copying the <code>config.example.js</code> file - that's what Ghost does when it starts. </p>
+
+            <p>To configure your Ghost URL, mail or database settings, open <code>config.js</code> in your favourite editor, and start changing the settings for your desired environment. If environments aren't something you've come across yet, read the documentation below.
+
+            
 
             <h2 id="environments">About Environments</h2>
 
