--- a/usage/faq.html
+++ b/usage/faq.html
@@ -20,7 +20,7 @@ prev_section: writing
 
             <h3>(When) Will Ghost support feature X?</h3>
 
-            <p>Please see the Planned Features listing and Roadmap on the Github wiki (links coming soon).</p>
+            <p>Please see the <a href="https://github.com/TryGhost/Ghost/wiki/Planned-Features">Planned Features</a> listing and <a href="https://github.com/TryGhost/Ghost/wiki/Roadmap">Roadmap</a> on the <a href="https://github.com/TryGhost/Ghost/wiki">Github wiki</a>.</p>
 
             <h3>How do I insert images into a post?</h3>
 
