--- a/installation/index.html
+++ b/installation/index.html
@@ -36,6 +36,8 @@ next_section: mac
 
             <h3>Getting started</h3>
 
+            <p>If you don't fancy following instructions on installing Node.js and Ghost manually, the lovely people over at <a href="http://bitnami.com/">BitNami</a> have created <a href="http://bitnami.com/stack/ghost">Ghost installers</a> for all major platforms.</p>
+
             <p>I want to install Ghost on:</p>
 
             <div class="text-center install-ghost">
