Moving gifs to links.

--- a/installation/mac.html
+++ b/installation/mac.html
@@ -31,7 +31,7 @@ next_section: windows
 
             <p class="note"><strong>Note:</strong> If '/usr/local/bin' does not appear in your $PATH, see the <a href="#export-path">troubleshooting tips</a> to find out how to add it</p>
 
-            <img width="100%" src="http://f.cl.ly/items/1g0s1L0p0K0b3G360a1Z/install-node-mac.gif" />
+            <p>If you get stuck you can watch the whole <a href="http://f.cl.ly/items/1g0s1L0p0K0b3G360a1Z/install-node-mac.gif" title="Install Node on Mac">process in action here</a>.</p>
 
             <h3>Install and Run Ghost</h3>
 
