You might require admin rights to install it.

--- a/installation/mac.html
+++ b/installation/mac.html
@@ -42,6 +42,7 @@ next_section: windows
                 <li>In finder, double-click on the downloaded zip file to extract it.</li>
                 <li>Next, grab the newly extracted 'ghost-#.#.#' folder and drag it onto the tab bar of your open terminal window, this will make a new terminal tab which is open at the correct location.</li>
                 <li>In the new terminal tab type <code>npm install --production</code> <span class="note">note the two dashes</span></li>
+                <li>If the above command fails, try <code>sudo npm install --production</code>. It will ask for your password.</li>
                 <li>When npm is finished installing, type <code>npm start</code> to start Ghost in development mode</li>
                 <li>In a browser, navigate to <code class="path">127.0.0.1:2368</code> to see your newly setup Ghost blog</li>
                 <li>Change the url to <code class="path">127.0.0.1:2368/ghost</code> and create your admin user to login to the Ghost admin.</li>
