Adding DO guide

--- a/installation/deploy.html
+++ b/installation/deploy.html
@@ -28,6 +28,7 @@ next_section: upgrading
                 <ul>
                     <li>Deploy to the cloud with <a href="http://wiki.bitnami.com/Applications/BitNami_Ghost">Bitnami</a>.</li>
                     <li>Launch Ghost with <a href="http://developer.rackspace.com/blog/launch-ghost-with-rackspace-deployments.html">Rackspace deployments</a>.</li>
+                    <li>Get up and running with a <a href="https://www.digitalocean.com/community/articles/how-to-use-the-digitalocean-ghost-application">DigitalOcean Droplet</a>.</li>
                 </ul>
             </p>
 
