Theme dir structure update

--- a/themes/index.html
+++ b/themes/index.html
@@ -54,14 +54,12 @@ subheading: Get started creating your own themes for Ghost
             <p>The recommended file structure is:</p>
             <pre>
 .
-├── /css
-|   ├── style.css
-|   └── post.css
-├── /fonts
-├── /images
-├── /js
-├── /lib
-├── /partials
+├── /assets
+|   └── /css
+|       ├── screen.css
+|   ├── /fonts
+|   ├── /images
+|   ├── /js
 ├── default.hbs
 ├── index.hbs [required]
 └── post.hbs [required]
