Moving all images to s3

--- a/installation/mac.html
+++ b/installation/mac.html
@@ -31,7 +31,7 @@ next_section: windows
 
             <p class="note"><strong>Note:</strong> If '/usr/local/bin' does not appear in your $PATH, see the <a href="#export-path">troubleshooting tips</a> to find out how to add it</p>
 
-            <p>If you get stuck you can watch the whole <a href="http://f.cl.ly/items/1g0s1L0p0K0b3G360a1Z/install-node-mac.gif" title="Install Node on Mac">process in action here</a>.</p>
+            <p>If you get stuck you can watch the whole <a href="https://s3-eu-west-1.amazonaws.com/ghost-website-cdn/install-node-mac.gif" title="Install Node on Mac">process in action here</a>.</p>
 
             <h3>Install and Run Ghost</h3>
 
@@ -48,7 +48,7 @@ next_section: windows
                 <li>See the <a href="/usage">usage docs</a> for instructions on the next steps</li>
             </ul>
 
-            <img width="100%" src="http://f.cl.ly/items/0W22431g241t2G3x3C24/install-ghost-mac.gif" />
+            <img width="100%" src="https://s3-eu-west-1.amazonaws.com/ghost-website-cdn/install-ghost-mac.gif" />
 
             {% if page.next_section || page.prev_section %}
                 {% include pagination.html %}
