--- a/installation/upgrading.html
+++ b/installation/upgrading.html
@@ -37,7 +37,7 @@ next_section: troubleshooting
 
             <p>The screencast below shows the steps for upgrading Ghost where the zip file has been downloaded to <code class="path">~/Downloads</code> and Ghost is installed in <code class="path">~/ghost</code> <span class="note"><strong>Note:</strong> <code>~</code> means the user's home directory on mac and linux</span></p>
 
-            <img src="http://f.cl.ly/items/2u1c3f2o0l1o0f09141j/upgrade-ghost.gif" width="100%" />
+            <img src="https://s3-eu-west-1.amazonaws.com/ghost-website-cdn/upgrade-ghost.gif" width="100%" />
 
             <p>The steps in the screencast are:
             <ul>
