--- a/usage/index.html
+++ b/usage/index.html
@@ -23,7 +23,7 @@ next_section: configuration
 
             <p>If you are running Ghost for the very first time, then you need to create your admin user account. Navigate to your new blog in your favourite browser, and then change the URL to <code class="path">&lt;your URL&gt;/ghost/signup/</code>. You should see a screen just like this one:</p>
 
-            <p><img src="http://f.cl.ly/items/0J0Y2D0O0S213h1Q3v0S/ghost-signup.png" /></p>
+            <p><img src="https://s3-eu-west-1.amazonaws.com/ghost-website-cdn/ghost-signup.png" /></p>
 
             <ul>
                 <li>Fill in your <strong>Full Name</strong> as the name you want to appear as the author of blog posts.</li>
@@ -37,7 +37,7 @@ next_section: configuration
 
             <p>On your first run of Ghost you should see a blue info message at the top of the screen that looks a little like this:</p>
 
-            <p><img src="http://f.cl.ly/items/1K1i3w222P3m1a0v2H2Y/first-run-info.png" /></p>
+            <p><img src="https://s3-eu-west-1.amazonaws.com/ghost-website-cdn/first-run-info.png" /></p>
 
             <p>It let's you know some information about the way Ghost is configured, such as which environment you've started it in, and what you've got your URL set to.
                 Jump to the <a href="/usage/configuration/">configuration</a> section to find out more about environments, and how to configure Ghost.
@@ -45,7 +45,7 @@ next_section: configuration
 
             <p>You may also see an orange warning message with regard to email:</p>
 
-            <p><img src="http://f.cl.ly/items/020C442z1z1M1N1e3231/email-warning.png" /></p>
+            <p><img src="https://s3-eu-west-1.amazonaws.com/ghost-website-cdn/email-warning.png" /></p>
 
             <p>This isn't critical to setting up your blog so you can get started writing, but it is a good idea to mosey on over to the <a href="/mail">email documentation</a> at some point, and learn about configuring Ghost to send email.
             This is currently only used to send you a reset email if you forget your password. Not important for blogging, but really useful if you ever need it!</p>
