--- a/usage/writing.html
+++ b/usage/writing.html
@@ -58,14 +58,14 @@ next_section: faq
             <h4> Images</h4>
 
             <p>To insert an image into your post, you need to first enter <code>![]()</code> into the Markdown editor panel. This should create an image upload box in your preview panel.
-            <img src="http://f.cl.ly/items/1F461f0r1S2N2H1c1e0h/Screen%20Shot%202013-10-14%20at%2012.45.08.png" />
+            <img src="https://s3-eu-west-1.amazonaws.com/ghost-website-cdn/Screen%20Shot%202013-10-14%20at%2012.45.08.png" />
             You can now drag and drop any image (.png, .gif, .jpg) from your Desktop over the image upload box to include it into your post, or alternatively click the image upload box to use a standard image upload popup. If you would prefer to include an image url, click the 'link' icon in the bottom left of the image upload box, this will then present you with the ability to insert an image URL.
-            <img src="http://f.cl.ly/items/1I0l2O2q1M2s3c0Q3V1i/Screen%20Shot%202013-10-14%20at%2012.34.21.png" />
+            <img src="https://s3-eu-west-1.amazonaws.com/ghost-website-cdn/Screen%20Shot%202013-10-14%20at%2012.34.21.png" />
             To title your image, all you need to do is place your title text inbetween the square brackets, e.g; <code>![This is a title]()</code>.
             </p>
 
             <h5>Removing Images</h5>
-            <img src="http://f.cl.ly/items/083v0x2S0A0Y0E3e2h3P/Screen%20Shot%202013-10-14%20at%2012.56.44.png" />
+            <img src="https://s3-eu-west-1.amazonaws.com/ghost-website-cdn/Screen%20Shot%202013-10-14%20at%2012.56.44.png" />
             <p>To remove an image click the 'remove' icon, in the top right corner of the currently inserted image.
             This will present you with the blank image upload box for you to re-insert a new image.</p>
 
