--- a/installation/windows.html
+++ b/installation/windows.html
@@ -26,7 +26,7 @@ next_section: linux
                 <li>Click through the installer, until you get to the screen telling you Node.js is installed.</li>
             </ul>
 
-            <p>If you get stuck you can watch the whole <a href="http://f.cl.ly/items/3N0l3Z1M2Q1G083K0v22/install-node-win.gif" title="Install node on Windows">process in action here</a>.</p>
+            <p>If you get stuck you can watch the whole <a href="https://s3-eu-west-1.amazonaws.com/ghost-website-cdn/install-node-win.gif" title="Install node on Windows">process in action here</a>.</p>
 
             <h3>Download & Extract Ghost</h3>
 
@@ -37,7 +37,7 @@ next_section: linux
                 <li>When the folder opens, right click on the downloaded zip file and choose 'Extract all'.</li>
             </ul>
 
-            <p>If you get stuck you can watch the whole <a href="http://f.cl.ly/items/1g0I1L0o1r0y143M1Z0P/install-ghost-win.gif" title="Install Ghost on Windows Part 1">process in action here</a>.</p>
+            <p>If you get stuck you can watch the whole <a href="https://s3-eu-west-1.amazonaws.com/ghost-website-cdn/install-ghost-win.gif" title="Install Ghost on Windows Part 1">process in action here</a>.</p>
 
             <h3>Install and Run Ghost</h3>
 
@@ -51,7 +51,7 @@ next_section: linux
                 <li>See the <a href="/usage">usage docs</a> for instructions on the next steps</li>
             </ul>
 
-            <img width="100%" src="http://f.cl.ly/items/0H0r1A2L061n1x3E3s47/install-ghost-win-2.gif" title="Install Ghost on Windows - Part 2" />
+            <img width="100%" src="https://s3-eu-west-1.amazonaws.com/ghost-website-cdn/install-ghost-win-2.gif" title="Install Ghost on Windows - Part 2" />
 
             {% if page.next_section || page.prev_section %}
                 {% include pagination.html %}
