--- a/mail/index.html
+++ b/mail/index.html
@@ -48,7 +48,7 @@ heading: Setting up Email
 
             <p>Verify your email address with Mailgun, and then you'll have access to their lovely control panel. You're going to need to find your new email service username and password that Mailgun have created for you (they're not the ones you sign up with), by clicking on your domain on the right hand side… see the little screencast below to help you find your details.</p>
 
-            <img src="http://f.cl.ly/items/2d0f0o3R1O2N2W2A060x/mailgun.gif" alt="Mailgun details" width="100%" />
+            <img src="https://s3-eu-west-1.amazonaws.com/ghost-website-cdn/mailgun.gif" alt="Mailgun details" width="100%" />
 
             <br /><br />
 
