--- a/usage/managing.html
+++ b/usage/managing.html
@@ -24,7 +24,7 @@ next_section: writing
                 <li>Enter a Post Title</li>
                 <li>Enter your post content using <a href="http://daringfireball.net/projects/markdown/syntax">Markdown</a></li>
                 <li>Save your Post as "Draft" by clicking the 'Save Draft' button, or press Ctrl / CMD + S.</li>
-                <img src="http://f.cl.ly/items/2l2h0N3u0c3Z3b2p1e1f/draft.gif" />
+                <img src="https://s3-eu-west-1.amazonaws.com/ghost-website-cdn/draft.gif" />
             </ol>
 
 
@@ -35,7 +35,7 @@ next_section: writing
             <ol>
                 <li>Click the arrow next to "Save Draft"</li>
                 <li>Select "Publish Now"</li>
-                <img src="http://f.cl.ly/items/0z3R223D0o2v0w334111/publish.gif" />
+                <img src="https://s3-eu-west-1.amazonaws.com/ghost-website-cdn/publish.gif" />
             </ol>
 
             <p>This will set the save state to 'Publish Now' and the button will turn Red, once you press this button the Post will be published. To return the Post to a 'Draft' state;</p>
@@ -52,7 +52,7 @@ next_section: writing
             <ol>
                 <li>Click the 'Settings' icon.</li>
                 <li>Proceed to update the information as required (this will be saved automatically when you naviagte away).</li>
-                <img style="max-width:100%;" src="http://f.cl.ly/items/3q172h1y3Z0m0N2f121D/updateSlug.gif">
+                <img style="max-width:100%;" src="hhttps://s3-eu-west-1.amazonaws.com/ghost-website-cdn/updateSlug.gif">
             </ol>
 
 
@@ -62,7 +62,7 @@ next_section: writing
                 <li>Navigate to the 'Settings' icon in either the 'Content' page or 'Editor' page.</li>
                 <li>Click "Delete".</li>
                 <li>Accept the Modal</li>
-                <img width="100%" src="http://f.cl.ly/items/3G2b3d443i1T1j0p433F/deletePost.gif" />
+                <img width="100%" src="https://s3-eu-west-1.amazonaws.com/ghost-website-cdn/deletePost.gif" />
             </ol>
 
             {% if page.next_section || page.prev_section %}
