--- a/installation/troubleshooting.html
+++ b/installation/troubleshooting.html
@@ -37,6 +37,17 @@ prev_section: upgrading
                     <p>For more information about building the binaries please see: <a href="https://github.com/developmentseed/node-sqlite3/wiki/Binaries">https://github.com/developmentseed/node-sqlite3/wiki/Binaries</a></p>
                     <p>Once you have successfully built a binary for your platform, please follow the <a href="https://github.com/developmentseed/node-sqlite3/wiki/Binaries#creating-new-binaries">instructions here</a> to submit the binary to the node-sqlite project, so that future users won't have the same problem.</p>
                 </dd>
+                <dt id="image-uploads">I can't upload images</dt>
+                <dd>
+                    <p>If you're on a DigitalOcean Droplet setup when Ghost was at v0.3.2, or you're using nginx on some other platform, you may find you cannot upload images.</p>
+                    <p>What's actually happening, is you cannot upload images bigger than 1MB (try a small image, it should work). That's a pretty small limit!</p>
+                    <p>To increase the limit you need to edit your nginx config file, and set the limit to something else.</p>
+                    <ul>
+                        <li>Log into your server, and type <code>sudo nano /etc/nginx/conf.d/default.conf</code> to open your config file.</li>
+                        <li>After the <code>server_name</code> line, add the following: <code>client_max_body_size 10M;</code></li>
+                        <li>Finally, press <kbd>ctrl</kbd> + <kbd>x</kbd> to exit. Nano will ask you if you want to save, type <kbd>y</kbd> for yes, and press <kbd>enter</kbd> to save the file.</li>
+                    </ul>
+                </dd>
             </dl>
 
             {% if page.next_section || page.prev_section %}
